2024-04-27  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* tfm.{c,h}, vf.c: Support upTeX new encoding
	for combining characters via virtual fonts.
	* cidtype2.c: Enable to treat Combining Katakana-Hiragana
	(Semi-)Voiced Sound Mark in cid_to_code().
	* dvipdfmx-upjf2.test, tests/upjf2.{tex,dvi}, tests/upj{f,v}.pl,
	tests/upj{f,v}-c.{pl,tfm}, tests/upjf1-r.{pl,tfm},
	tests/upj{f,v}2_full.{vf,zvp0}, tests/upjf{,-hara}.map,
	tests/Makefile_upjf, Makefile.am: Add a test for
	upTeX new encoding. It requires HaranoAji fonts.
	https://github.com/texjporg/tex-jp-build/issues/46
	* configure.ac: version 20240427.

2024-04-09  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* dvipdfmx-incl.test, tests/multi_incl.{tex,dvi},
	tests/sue-mp.pdf, Makefile.am:
	Add tests for including images multiple times
	from Hironori Kitagawa <h_kitagawa2001@yahoo.co.jp>.

2024-04-07  Yukimasa Morimi  <h20y6m@yahoo.co.jp>

	* pdfximage.c: fix an issue where the PDF becomes large when
	inserting the same image multiple times.
	https://github.com/texjporg/tex-jp-build/pull/169
	* configure.ac: version 20240407.

2024-03-10  Karl Berry  <karl@tug.org>

	* TL'24 release.

2024-03-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* configure.ac: version 20240305.

2024-03-05  Max Chernoff  <mseven@telus.net>

	* pdfximage.c (pdf_ximage_load_image): check that strcmp args
	are not non-null. Report from Hartmut Henkel,
	https://tug.org/pipermail/tex-live/2024-March/050136.html

2024-02-25  Max Chernoff  <mseven@telus.net>
 
 	* spc_util.{c,h}: Add "named" keyword to "pdf:image" special
 	* pdfdoc.{c,h}: Allow selecting a page by named destination
 	* {epdf,pdfximage,spc_pdfm,xbb}.{c,h}: Refactor to support above.
 
2024-02-10  Yukimasa Morimi  <h20y6m@yahoo.co.jp>

	* cidtype2.c, sfnt.h, tt_cmap.{c,h}:
	Look up the TrueType cmap format 14 subtable when mapping CID to
	Unicode Variation Sequence in new Adobe-Japan1-UCS2 CMap.
	https://github.com/texjporg/tex-jp-build/issues/155
